Configured the database, added schema, and inserted data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=promo-codes-manager
+
+spring.datasource.url=jdbc:h2:mem:h2-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.h2.console.enabled=true
+
+spring.jpa.properties.hibernate.default_schema=public
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:db/schema.sql
+spring.sql.init.data-locations=classpath:db/data.sql
+spring.jpa.show-sql=true
