--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=promo-codes-manager
 
-spring.datasource.url=jdbc:h2:mem:h2-db
+spring.datasource.url=jdbc:h2:mem:h2-dbd
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.h2.console.enabled=true
@@ -10,3 +10,4 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:db/schema.sql
 spring.sql.init.data-locations=classpath:db/data.sql
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
