--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=promo-codes-manager
 
-spring.datasource.url=jdbc:h2:mem:h2-dbd
+spring.datasource.url=jdbc:h2:mem:h2-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.h2.console.enabled=true
